--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         var camera = new THREE.PerspectiveCamera(
             75,
-            window.innerWidth/window.innerHeight,
+            window.innerWidth / window.innerHeight,
             0.1,
             1000
         );
@@ -36,16 +36,63 @@
             camera.updateProjectionMatrix();
         });
 
-        var geometry = new THREE.SphereGeometry(1, 10, 10);
+        var raycaster = new THREE.Raycaster();
+        var mouse = new THREE.Vector2();
+
+        var geometry = new THREE.BoxGeometry(1, 1, 1);
         var material = new THREE.MeshLambertMaterial({ color: 0xFFCC00 });
-        var mesh = new THREE.Mesh(geometry, material);
-        scene.add(mesh);
+        // var mesh = new THREE.Mesh(geometry, material);
+
+        // mesh.position.x = 0;
+        // mesh.position.y = 0;
+        // mesh.position.z = 0;
+        // mesh.position.set(2, 0, 0);
+
+        // scene.add(mesh);
+
+        meshX = -10;
+        for (let i = 0; i < 15; i++) {
+            let mesh = new THREE.Mesh(geometry, material);
+            mesh.position.x = (Math.random() - 0.5) * 10;
+            mesh.position.y = (Math.random() - 0.5) * 10;
+            mesh.position.z = (Math.random() - 0.5) * 10;
+
+            scene.add(mesh);
+            meshX += 1;
+        }
 
         var light = new THREE.PointLight(0xFFFFFF, 1, 500);
-        light.position.set(10, 0 ,25);
+        light.position.set(0, 0 , 0);
         scene.add(light);
 
-        renderer.render(scene, camera);
+        // renderer.render(scene, camera);
+
+        var render = function() {
+            requestAnimationFrame(render);
+            renderer.render(scene, camera);
+        };
+
+        function onMouseMove(e) {
+            e.preventDefault();
+
+            mouse.x = (e.clientX / window.innerWidth) * 2 - 1;
+            mouse.y = - (e.clientY / window.innerHeight) * 2 + 1;
+
+            raycaster.setFromCamera(mouse, camera);
+
+            var intersects = raycaster.intersectObjects(scene.children, true);
+
+            for (let i = 0; i < intersects.length; i++) {
+                this.tl = new TimelineMax();
+                this.tl.to(intersects[i].object.scale, 1, { x: 2, ease: Expo.easeOut });
+                this.tl.to(intersects[i].object.scale, .5, { x: .5, ease: Expo.easeOut });
+                this.tl.to(intersects[i].object.position, .5, { x: 2, ease: Expo.easeOut });
+                this.tl.to(intersects[i].object.rotation, .5, { y: Math.PI * .5, ease: Expo.easeOut }, "=-1.5");
+            }
+        }
+
+        render();
+        window.addEventListener('mousemove', onMouseMove);
 
     </script>
 </body>
